snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.jar.sha256
50b25cc7df342470771d4f38d8a9c54dd81662adae3ca6f908cf72d5c73d8a72